# samsa

./: README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
samsa/: __main__.py  app.py  auth.py  constants.py  email.py  models.py  settings.py
samsa/routes/: account.py  profile.py  sso.py
static/: webauthn.js
templates/: base.html  check_email.html  error.html  logged_out.html  login.html  user.html
