[tool.poetry]
name = "samsa"
version = "0.1.0"
description = "Multidomain Single Sign-On for NGINX"
authors = ["Nikita Sychev <root@nsychev.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
SQLAlchemy = "^2.0.29"
fastapi-async-sqlalchemy = "^0.6.1"
Jinja2 = "^3.1.3"
itsdangerous = "^2.2.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
aiosmtplib = "^3.0.1"
webauthn = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
